--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The basics of JavaScript</title>
 </head>
 <body>
-    <h1>This is the main header of HTML file</h1>
-    <p>this is the first paragraph</p>
-    <ol>
-        <li>This is the first item on the ordered list</li>
-        <li>This is the second item on the ordered list</li>
-    </ol>
+    <script src="script.js"></script>
 </body>
 </html>
+
+
+
